<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.Profile"
    android:background="@color/colorBackground">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/icon_vader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/logout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/icon_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon"
            app:layout_constraintBottom_toTopOf="@id/linearLayout"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/usernameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBlack"
                android:text="@string/Username"
                android:textColor="@color/colorBlack"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/colorBlack"
                android:text="@string/Password"
                android:textColor="@color/colorBlack"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/colorBlack"
                android:text="@string/email"
                android:textColor="@color/colorBlack"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/phoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/colorBlack"
                android:text="@string/phone"
                android:textColor="@color/colorBlack"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/colorBlack"
                android:text="@string/description"
                android:textColor="@color/colorBlack"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/countryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/colorBlack"
                android:text="@string/country"
                android:textColor="@color/colorBlack"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/cityText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/colorBlack"
                android:text="@string/city"
                android:textColor="@color/colorBlack"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/birthdayText"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/colorBlack"
                android:text="@string/birthday"
                android:textColor="@color/colorBlack"
                android:visibility="invisible"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/btnEdit"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                app:srcCompat="@drawable/icon_edit"
                android:layout_gravity="end"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                android:id="@+id/usernameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintUsername"
                android:backgroundTint="@color/colorBlack"
                android:inputType="textPersonName"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="28sp"/>

            <EditText
                android:id="@+id/passwordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hintPassword"
                android:backgroundTint="@color/colorBlack"
                android:inputType="textPersonName"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="28sp"/>

            <EditText
                android:id="@+id/emailEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_email"
                android:backgroundTint="@color/colorBlack"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="28sp"/>

            <EditText
                android:id="@+id/numberEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_phone"
                android:backgroundTint="@color/colorBlack"
                android:inputType="phone"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="28sp"/>

            <EditText
                android:id="@+id/descriptionEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description"
                android:backgroundTint="@color/colorBlack"
                android:inputType="textMultiLine"
                android:layout_marginTop="12dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="28sp"/>

            <EditText
                android:id="@+id/countyEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_country"
                android:backgroundTint="@color/colorBlack"
                android:inputType="textPersonName"
                android:layout_marginTop="12dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="28sp"/>

            <EditText
                android:id="@+id/cityEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_city"
                android:backgroundTint="@color/colorBlack"
                android:inputType="textPersonName"
                android:layout_marginTop="12dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="28sp"/>

            <EditText
                android:id="@+id/birthdayEdit"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_birthday"
                android:backgroundTint="@color/colorBlack"
                android:inputType="textPersonName"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:visibility="invisible"
                android:textSize="28sp"/>

            <ImageView
                android:id="@+id/btnAccept"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                app:srcCompat="@drawable/icon_accept"
                android:layout_gravity="end"/>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>